--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Kebijakan Privasi - Jurnal Syukur Harian</title>
+  <title>Kebijakan Privasi Jurnal Syukur Harian</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -62,7 +62,7 @@
 
   <h2>6. Kontak</h2>
   <p>Jika Anda memiliki pertanyaan tentang kebijakan privasi ini, silakan hubungi kami di:</p>
-  <p><strong>Email:</strong> <a href="mailto:hesdev7@gmail.com">emailanda@example.com</a></p>
+  <p><strong>Email:</strong> <a href="mailto:hesdev7@gmail.com">hesdev7@gmail.com</a></p>
 
 </body>
 </html>
